--- a/Sidemenu/Classification/logistic_regression/logistic_regression.html
+++ b/Sidemenu/Classification/logistic_regression/logistic_regression.html
@@ -81,7 +81,7 @@
     <br />
     <h1>Logistic Regression</h1>
 
-  <h4>Logistic Regression</h4>
+  <h4>Logistic Regression Tutorial</h4>
     <br />
     <div class="text-center">
       <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Logistic_Regression_Tutorial.ipynb"> Edit Code</a>
