--- a/Sidemenu/Classification/Decision_Tree/decision_tree.html
+++ b/Sidemenu/Classification/Decision_Tree/decision_tree.html
@@ -81,7 +81,7 @@
     <br />
     <h1>Decision Tree</h1>
 
-  <h4>Decision Tree</h4>
+  <h4>Decision Tree Tutorial</h4>
     <br />
     <div class="text-center">
       <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Decision_Tree_Tutorial.ipynb"> Edit Code</a>
