--- a/Sidemenu/Classification/Random_Forest/random_forest.html
+++ b/Sidemenu/Classification/Random_Forest/random_forest.html
@@ -81,7 +81,7 @@
     <br />
     <h1>Random Forest</h1>
 
-  <h4>Random Forest</h4>
+  <h4>Random Forest Tutorial</h4>
     <br />
     <div class="text-center">
       <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Random_Forest_Tutorial.ipynb"> Edit Code</a>
