--- a/Sidemenu/CNN/Digit_Recognition/digit_recognition.html
+++ b/Sidemenu/CNN/Digit_Recognition/digit_recognition.html
@@ -81,7 +81,7 @@
     <br />
     <h1>Digit Recognition</h1>
 
-  <h4>Digit Recognition</h4>
+  <h4>Digit Recognition Tutorial</h4>
     <br />
     <div class="text-center">
       <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Digit_Recognition.ipynb"> Edit Code</a>
