--- a/Sidemenu/UseCase/Fake_News_Detection/fake_news_detection.html
+++ b/Sidemenu/UseCase/Fake_News_Detection/fake_news_detection.html
@@ -81,7 +81,7 @@
     <br />
     <h1>Fake News Detection</h1>
 
-  <h4>Fake News Detection</h4>
+  <h4>Fake News Detection Tutorial</h4>
     <br />
     <div class="text-center">
       <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Fake_News_Detection.ipynb"> Edit Code</a>
