--- a/Sidemenu/UseCase/Heart_Disease_Detection/heart_disease_detection.html
+++ b/Sidemenu/UseCase/Heart_Disease_Detection/heart_disease_detection.html
@@ -81,7 +81,7 @@
     <br />
     <h1>Heart Disease Detection</h1>
 
-  <h4>Heart Disease Detection</h4>
+  <h4>Heart Disease Detection Tutorial</h4>
     <br />
     <div class="text-center">
       <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Heart_Disease_Detection.ipynb"> Edit Code</a>
