--- a/Navbar/Contributions/contributions.html
+++ b/Navbar/Contributions/contributions.html
@@ -106,7 +106,7 @@
         <div id= "steps" style="float: left; margin: auto; text-align: left;">
           <ol>
               <li>Go to the following <a href="https://github.com/hands-on-data/hands-on-data.github.io">REPO LINK</a></li>
-              <li>Click on the Contributions folder</li>
+              <li>Click on the /Navbar/Contributions folder</li>
               <li>Click on the contributions.html file</li>
               <li>In the file contributions.html there is a div named card</li>
               <li>Copy the div named card and paste it again below the other divs</li>
