added the credits for dataset and youtube resources

--- a/Navbar/About/about.html
+++ b/Navbar/About/about.html
@@ -98,6 +98,10 @@
         </ul> 
     </div>
 
+    <b>**All the datasets used in tutorials have been taken from UCI Machine Learning Repository and Kaggle website.</b>
+    <br>
+    <b>**Most of the resources present in the Resources Section have been taken Youtube and all rights for those videos goes to the creater for the same.</b>
+
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
